[Cubo] Fix iOS com z-index buggado

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -550,12 +550,11 @@ body {
       body .content-wrapper .cubo-wrapper .container {
         width: 100%;
         height: 110px;
-        perspective: 1100px;
-        perspective-origin: -50% -50%;
-        float: left; }
+        float: left;
+        position: relative; }
       body .content-wrapper .cubo-wrapper .cube {
         transform-style: preserve-3d;
-        transform: rotateY(35deg) rotateX(-13deg) rotateZ(-15deg);
+        transform: rotateY(45deg) rotateX(-13deg) rotateZ(-15deg);
         position: absolute;
         top: 4%;
         left: 28%;
@@ -564,13 +563,13 @@ body {
         height: 100px;
         transition: 1s; }
         body .content-wrapper .cubo-wrapper .cube.first-role.top.right {
-          top: 20%;
-          left: 42%; }
+          top: 17%;
+          left: 40%; }
         body .content-wrapper .cubo-wrapper .cube.first-role.bottom.left {
-          top: 47%; }
+          top: 51%; }
         body .content-wrapper .cubo-wrapper .cube.first-role.bottom.right {
           top: 63%;
-          left: 42%; }
+          left: 40%; }
         body .content-wrapper .cubo-wrapper .cube.back-role.top.left {
           left: 40.4%;
           top: -12%; }
@@ -579,7 +578,7 @@ body {
           left: 53.4%; }
         body .content-wrapper .cubo-wrapper .cube.back-role.bottom.left {
           top: 47%;
-          left: 42%; }
+          left: 40%; }
         body .content-wrapper .cubo-wrapper .cube.back-role.bottom.right {
           top: 47%;
           left: 53.2%; }
