--- a/src/assets/sass/tesseract.scss
+++ b/src/assets/sass/tesseract.scss
@@ -758,14 +758,16 @@ body {
             .container {
         		width: 100%;
         		height: 110px;
-        		perspective: 1100px;
-        		perspective-origin: -50% -50%;
+        		// perspective: 1100px;
+        		// perspective-origin: -50% -50%;
         		float: left;
+                position: relative;
         	}
 
     		.cube {
     			transform-style: preserve-3d;
-    			transform: rotateY(35deg) rotateX(-13deg) rotateZ(-15deg);
+                // transform: rotateY(35deg) rotateX(-13deg) rotateZ(-15deg);
+    			transform: rotateY(45deg) rotateX(-13deg) rotateZ(-15deg);
                 position: absolute;
                 top: 4%;
     			left: 28%;
@@ -780,19 +782,20 @@ body {
                             // z-index: 3;
                         }
                         &.right {
-                            top: 20%;
-                            left: 42%;
+                            top: 17%;
+                            left: 40%;
                             // z-index: 4;
                         }
                     }
                     &.bottom {
                         &.left {
                             // z-index: 2;
-                            top: 47%;
+                            top: 48.5%;
+                            left: 28.4%;
                         }
                         &.right {
-                            top: 63%;
-                            left: 42%;
+                            top: 61%
+                            left: 40.5%;
                             // z-index: 3;
                         }
                     }
@@ -801,12 +804,12 @@ body {
                     &.top {
                         &.left {
                             // z-index: 1;
-                            left: 40.4%;
-                            top: -12%;
+                            left: 40.5%;
+                            top: -10%;
                         }
                         &.right {
-                            top: 4%;
-                            left: 53.4%;
+                            top: 2.5%%;
+                            left: 52.5%;
                             // z-index: 2;
                         }
                     }
@@ -814,7 +817,7 @@ body {
                         &.left {
                             // z-index: 1;
                             top: 47%;
-                            left: 42%;
+                            left: 40%;
                         }
                         &.right {
                             top: 47%;
